# EvolutionWORLD

./: .gitignore  AGENTS.md  CMakeLists.txt  Code_Documentation.txt  EvolutionWORLD.sln  README.md  changelog.txt
include/: Button.h  Creature.h  Helper.h  InputField.h  PercentileGraph.cpp  PercentileGraph.h  RNG.h  Slider.h  SpeciesGraph.h  UIElement.h  World.h
src/: Button.cpp  Creature.cpp  Helper.cpp  InputField.cpp  PercentileGraph.cpp  Slider.cpp  SpeciesGraph.cpp  World.cpp  main.cpp
